debug_notes
node_modules/.bin/electron -r ts-node/register/transpile-only ./src/main/main.ts
App threw an error during load
node_modules/electron/dist/resources/default_app.asar/main.js:113
/mnt/wsl/projects/git/www/electron-react-pos/src/main/main.ts:14
import { readFileSync, writeFile } from 'fs';
^^^^^^

SyntaxError: Cannot use import statement outside a module
    at Object.compileFunction (node:vm:352:18)
    at wrapSafe (node:internal/modules/cjs/loader:1038:15)
    at Module._compile (node:internal/modules/cjs/loader:1072:27)
    at Object.Module._extensions..js (node:internal/modules/cjs/loader:1169:10)
    at Module.load (node:internal/modules/cjs/loader:988:32)
    at Module._load (node:internal/modules/cjs/loader:829:12)
    at Function.c._load (node:electron/js2c/asar_bundle:5:13331)
    at loadApplicationPackage (/mnt/wsl/projects/git/www/electron-react-pos/node_modules/electron/dist/resources/default_app.asar/main.js:110:16)
    at Object.<anonymous> (/mnt/wsl/projects/git/www/electron-react-pos/node_modules/electron/dist/resources/default_app.asar/main.js:222:9)
    at Module._compile (node:internal/modules/cjs/loader:1116:14)
node_modules/electron/dist/resources/default_app.asar/main.js:
